@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 13:28:02 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 13:30:04 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -170,5 +170,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>釜山國際電影節創下觀眾人數新紀錄。。釜山國際電影節（BIFF）在10天的放映後於今日落幕，創下觀眾人數新紀錄。今年的電影節共吸引了超過145,000名觀眾前往釜山觀賞電影。。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 13:28:02 +0800</pubDate>
+</item><item>
+  <title>韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵</title>
+  <link>https://www.famechos.me/news/韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵.html</link>
+  <description>韓寒獲諾貝爾文學獎，聚焦譯者的角色...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 13:30:04 +0800</pubDate>
 </item></channel>
 </rss>
