@@ -1,0 +1,271 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u5bd2\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f8c\uff0c\u97d3\u570b\u6587\u5b78\u754c\u7684\u5168\u7403\u8e8d\u5347\uff1a\u8b6f\u8005\u7684\u89d2\u8272\u6210\u95dc\u9375", "description": "\u97d3\u5bd2\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f8c\uff0c\u97d3\u570b\u6587\u5b78\u754c\u7684\u5168\u7403\u8e8d\u5347\uff1a\u8b6f\u8005\u7684\u89d2\u8272\u6210\u95dc\u9375", "url": "https://www.famechos.me/news/\u97d3\u5bd2\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f8c\uff0c\u97d3\u570b\u6587\u5b78\u754c\u7684\u5168\u7403\u8e8d\u5347\uff1a\u8b6f\u8005\u7684\u89d2\u8272\u6210\u95dc\u9375.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T13:29:56.029921+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵.html"/>
+<meta name="description" content="韓寒獲諾貝爾文學獎後，韓國文學界在全球躍升的背後，譯者的角色扮演著關鍵性角色。了解譯者如何推動韓國文學的全球化浪潮。">
+
+<meta name="keywords" content="韓寒、諾貝爾文學獎、韓國文學、譯者、全球躍升、文學界">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵.html" />
+        <meta property="og:title" content="韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵" />
+        <meta property="og:description" content="韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵" />
+        <meta property="twitter:description" content="韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>2024年諾貝爾文學獎得主韓寒的作品《素食者》於2016年獲得布克國際文學獎後，韓國文學界開始重視譯者的角色。當時，該書的譯者德博拉·史密斯（Deborah Smith）獲得了與韓寒同等的認可。</p>
+<p>史密斯將譯作文學作品描述為“在另一種語言中創造性地重寫它，這是一個需要不同程度的解釋和編輯決策的過程”，這需要同時具備“文學感性”和“語言能力”。她表示，她的工作是出於“與更多人分享我所喜愛的書”的願望。</p>
+<p>史密斯直到21歲才開始學習韓語，幾年後就開始譯述複雜而富有詩意的作品，如《素食者》。她說：“一個糟糕的譯本可以毀壞一本精彩的書，但即使是世界上最好的譯本也無法使一本普通的小說變成經典。”</p>
+<p>不到十年後，一批新的、熟練的多語言譯者出現在這個領域，將韓國文學帶給全球讀者。其中包括安東·赫爾（Anton Hur），他是布克國際文學獎的決賽選手，曾譯述鄭寶羅的《詛咒的兔子》；以及Sora Kim-Russell和Youngjae Josephine Bae，他們譯述了黃晳暎的《母親2-10》，該書入圍了2024年布克國際文學獎。</p>
+<p>赫爾是一位譯者和作家，他被任命為2025年布克國際文學獎的評委，以表彰他活躍的譯作，包括黃晳暎的《囚犯》、朴相英的《大城市中的愛情》和BTS的《超越故事：BTS的10年紀錄》。</p>
+<p>Sora Kim-Russell是一位作家和譯者，她出生和成長於美國，現在居住在首爾。她曾在梨花女子大學和韓國文學翻譯院教授譯作課程，並譯述了黃晳暎的《黎明》，該書入圍了2019年布克國際文學獎。</p>
+<p><p>另一位著名的譯者是Emily Yae Won，她與史密斯合作譯述了《希臘課程》，目前正在與Paige Aniyah Morris合作譯述韓寒的《我們不分離》，該書將於明年在美國和英國出版。</p>崔京蘭是法國的一位著名譯者，她與Pierre Bisiou合作譯述了《我們不分離》的法語版《不可能的告別》，該書於11月獲得了法國的美第奇獎。這對搭檔還合作譯述了《大城市中的愛情》，該書入圍了今年的法國獎項。</p>
+<p>韓國文學在全球的推廣中，史密斯的斜軸出版社（Tilted Axis Press）扮演了重要角色。該出版社出版了韓寒的《人類行為》和《證人的輓歌》，以及裴秀兒的《更大的音樂》和《朗誦》等作品。</p>
+<p>在韓國，國營的韓國文學翻譯院（LTI）和大山基金會是該領域的兩個關鍵角色。自1996年成立以來，LTI在44種語言中培養了文學譯者，而大山基金會在私營部門做出了重要貢獻。</p>
+<p>韓寒的諾貝爾文學獎凸顯了國家和私營部門多年的合作努力，推動了“高質量的譯作服務，幫助韓國文學登上全球舞台，”韓國文學翻譯院前主席郭孝煥說。</p>
+<h2>諾貝爾文學獎：韓國文學界的期盼與奮鬥</h2>
+<p>韓國文學界一直期待能夠產生一位諾貝爾文學獎的得主。有人認為，現在是時候為未來的韓國文學在全球舞台上做好準備。</p>
+<p>韓國文學翻譯院和大山基金會等組織一直致力於推廣韓國文學，讓更多的人認識和欣賞韓國的文學作品。這次的諾貝爾文學獎得主也將為韓國文學帶來更多的關注和機會。</p>
+<p>韓國的新聞機構韓聯社報導了這次的諾貝爾文學獎得主，並引述了專家的意見，認為這次的獎項將會對韓國文學界產生積極的影響。</p>
+<p>梨花女子大學等學術機構也在研究和推廣韓國文學，讓更多的人了解和欣賞韓國的文學作品。</p>
+<p>近期，韓國的政治局勢也引起了關注。北韓領導人的妹妹警告說，如果南韓的無人機再次被發現，將會導致災難性的後果。同時，北韓也向南韓發射了20個垃圾氣球，引起了南韓的關注。</p>
+<p>南韓、美國和日本的峰會預計將在2024年底舉行，國家安全顧問表示，這次的峰會將會討論北韓問題和區域安全等議題。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SaJjB3-cUNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文壇新星！首位諾貝爾文學獎得主韓江：寫下韓國現代史的傷痛與溫暖.html">韓國文壇新星！首位諾貝爾文學獎得主韓江：寫下韓國現代史的傷痛與溫暖</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」.html">韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌.html">諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
